# portly

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
docs/: IMPLEMENTATION.md  PLAN.md  전달안내.md
src/: App.css  App.tsx  DetailModal.tsx  Projects.tsx  Settings.tsx  api.ts  friendly.ts  grouping.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  detect.rs  kill.rs  lib.rs  main.rs  model.rs  registry.rs  scan.rs  spawn.rs
